implement CRUD for collections
